--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "visiontrader-backend",
   "version": "1.0.0",
-  "description": "Backend VisionTrader pour Render",
-  "main": "serveur.js",
+  "description": "Backend VisionTrader",
+  "main": "server.js",
   "scripts": {
-    "start": "node serveur.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
